# xclaw-x

./: .gitignore  CLAUDE.md  README.md  demo.html  pyproject.toml  xclaw.html
samples/javascript/posts/: create_post.js  search_recent.js
samples/javascript/spaces/: search_spaces.js
scripts/: download_models.py  export_yolo_onnx.py
skills/x-twitter/: SKILL.md
skills/x-twitter/assets/: examples.md
tests/: conftest.py  test_action_backend.py  test_architecture_reinforcement.py  test_bench.py  test_context_state.py  test_integration.py  test_merger.py  test_merger_proximity.py  test_platform_detect.py  test_safety.py  test_scheduler.py
xclaw/: .env.example  README.md  cli.py  config.py  pyproject.toml  serve.py
xclaw/action/: __init__.py  humanize.py  humanize_strategy.py  keyboard.py  keyboard_darwin.py  keyboard_win32.py  mouse.py  mouse_darwin.py  mouse_win32.py  native_backend.py
xclaw/cli/: __init__.py  _silence.py  core.py
xclaw/cli/commands/: __init__.py  action.py  look.py
xclaw/core/: daemon.py  daemon_server.py  parser.py  pipeline.py
xclaw/core/context/: glance.py  scheduler.py  scroll.py  state.py
xclaw/core/perception/: __init__.py  backend.py  engine.py  icon_classifier.py  merger.py  minicpm_caption.py  ocr.py  omniparser.py  pipeline_backend.py  siglip_classifier.py  types.py
xclaw/platform/: __init__.py  detect.py  gpu.py  permissions.py
xclaw/skills/: SKILL.md  commands.md  workflow.md
xclaw/xclaw/: __init__.py  __main__.py  api.py  auth.py  cli.py
xclaw/xclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
xclaw/xclaw/commands/: __init__.py  dm.py  engage.py  media.py  post.py  scout.py  search.py  timeline.py
xclaw/xclaw/scout/: __init__.py  cache.py  parser.py  scraper.py
