[project]
name = "xclaw"
version = "0.6.0"
description = "Vision-based screen parser & controller for LLM agents — Windows CUDA"
requires-python = ">=3.12"

dependencies = [
    # ── 感知层 ──
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "timm>=1.0.0",
    "supervision>=0.25.0",
    "onnxruntime-gpu>=1.17.0",
    "ultralytics>=8.1.0",
    "rapidocr>=3.0.0",

    # ── 截屏 + 图像 ──
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",

    # ── 工具 ──
    "pyperclip>=1.8.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "huggingface-hub[cli]>=0.25.0",
    "openai>=1.3.0",

    # ── Windows ──
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=3.0.0",
]

[project.scripts]
xclaw = "xclaw.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

# torch/torchvision: CUDA 12.1 wheels
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[tool.pytest.ini_options]
markers = [
    "gpu: requires GPU and OmniParser models",
    "slow: tests that take more than 5 seconds",
    "integration: full pipeline integration tests",
    "bench: performance benchmarks",
]
addopts = "-m 'not gpu and not bench'"
